Preparado para utilizar o sistema em produ;cão